[package]
name = "endiantype"
version = "0.1.1"
authors = ["John Lu luhy2017@mail.sustech.edu.cn"]
edition = "2018"
description = "endiantype is an no-std, endian-aware implementation of primitive types like u8, u16, etc."
license = "MIT"
repository = "https://github.com/jwnhy/endiantype"
keywords = ["endian", "nostd", "byteorder", "embedded", "types"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
