[package]
name = "endiantype"
version = "0.1.2"
authors = ["John Lu luhy2017@mail.sustech.edu.cn"]
edition = "2018"
description = "endiantype is an no-std, endian-aware implementation of primitive types like u8, u16, etc."
license = "MIT"
repository = "https://github.com/jwnhy/endiantype"
keywords = ["endian", "nostd", "byteorder", "embedded", "types"]
documentation = "https://docs.rs/endiantype"
categories = ["no-std"]

[features]
default = ["std"]
std = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
